# TressFX

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  README.md  ReadMe.txt
Core/: DXUT.cpp  DXUT.h  DXUT_2012.vcxproj  DXUT_2013.vcxproj  DXUT_2015.vcxproj  ScreenGrab.cpp  ScreenGrab.h  Windows81SDKVS12_x64.props  dxerr.cpp  premake5.lua
Optional/: DXUTOpt_2012.vcxproj  DXUTOpt_2013.vcxproj  DXUTcamera.cpp  DXUTgui.cpp  DXUTsettingsdlg.h  SDKmisc.h  premake5.lua
ags_lib/: .gitattributes
ags_lib/lib/: amd_ags_x64.lib
amd_lib/inc/: AMD_LIB.h
amd_lib/premake/: premake5.lua  premake5_minimal.lua
amd_lib/src/: AMD_Buffer.cpp  AMD_FullscreenPass.h  AMD_Rand.h  AMD_SaveRestoreState.h  AMD_Serialize.cpp  AMD_Serialize.h  AMD_Texture2D.cpp  (+1 more)
dxut/: ReadMe.txt
inc/: AMD_LIB.h  AMD_SDK.h  AMD_Types.h  amd_ags.h
lib/: amd_ags_x86.lib
premake/: amd_premake_util.lua  gpuopen_fx_update_vs_files.bat  gpuopen_tressfx_update_vs_files.bat  premake5.lua  premake5_minimal.lua
src/: AMD_Buffer.h  AMD_Common.cpp  AMD_Common.h  AMD_FullscreenPass.cpp  AMD_FullscreenPass.h  AMD_Mesh.cpp  AMD_Mesh.h  AMD_Rand.cpp  AMD_SaveRestoreState.cpp  AMD_Serialize.cpp  AMD_Texture2D.h  AMD_UnitCube.cpp  EngineInterface.h  Geometry.cpp  HUD.cpp  HUD.h  HairStrands.cpp  HairStrands.h  HelperFunctions.cpp  HelperFunctions.h  LineRender.cpp  LineRender.h  Magnify.cpp  Magnify.h  SDF.h  SceneGLTFImpl.cpp  SceneGLTFImpl.h  ShaderCache.cpp  ShaderCacheSampleHelper.cpp  Simulation.cpp  Sprite.cpp  Sprite.h  Timer.cpp  Timer.h  TressFXSample.cpp  TressFXSample.h
(+697 files in other folders)
